[package]
edition = "2021"
name = "univ3-revm-arbitrage"
publish = false
version = "0.0.0"
rust-version = "1.81.0"

[dependencies]
alloy = { version = "0.3.6", features = ["full", "node-bindings"] }
cacache = { version = "12.0.0", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }

anyhow = "1.0"
reqwest = { version = "0.12" }
revm = { version = "14.0.2", features = ["alloydb"] }
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
name = "eth_call_one"
path = "src/eth_call_one.rs"

[[bin]]
name = "eth_call"
path = "src/eth_call.rs"

[[bin]]
name = "anvil"
path = "src/anvil.rs"

[[bin]]
name = "revm"
path = "src/revm.rs"

[[bin]]
name = "revm_cached"
path = "src/revm_cached.rs"

[[bin]]
name = "revm_quoter"
path = "src/revm_quoter.rs"

[[bin]]
name = "revm_validate"
path = "src/revm_validate.rs"

[[bin]]
name = "revm_arbitrage"
path = "src/revm_arbitrage.rs"
